--- a/src/assets/scss/section/_layout.scss
+++ b/src/assets/scss/section/_layout.scss
@@ -5,9 +5,7 @@
     width: 260px;
     height: 100vh;
     z-index: 1000;
-    background-color: #000000;
-
-    
+    background-color: var(--black);
 }
 
 
@@ -41,9 +39,20 @@
 @media (max-width:800px) {
     #header {
         left: -260px;
+        // transition: all 0.3s ease-in;
+        height: 90.7vh;
+
+        &.show {
+            left: 0;
+            // background-color: #fff;
+            top: 87px;
+        }
     }
     #main {
         padding-left: 0px;
     }
-    #footer {}
+    #footer {
+        width: 100%;
+        margin-left: 0;
+    }
 }
