--- a/src/assets/scss/section/_channel.scss
+++ b/src/assets/scss/section/_channel.scss
@@ -97,7 +97,7 @@
         button {
             font-weight: 700;
             line-height: 1.5;
-            padding: 5px 10px 5px 21px;
+            padding: 5px 10px;
             background-color: var(--black);
             color: var(--white);
             cursor: pointer;
