폰트 재 적용

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 
+
 // setting
 @import "setting/font";
 @import "setting/vars";
@@ -16,3 +17,5 @@
 @import "section/swiper.scss";
 @import "section/video.scss";
 @import "section/channel.scss";
+
+@import url("https://fonts.googleapis.com/css2?family=Mapo+Golden+Pier&family=Hahmlet:wght@100;200;300;400;500;600;700;800;900&family=Oswald:wght@700&display=swap");
